--- a/layouts/partials/general/stack.html
+++ b/layouts/partials/general/stack.html
@@ -12,7 +12,11 @@
       <li>
         {{ partial "svg/react.svg" }}
       </li>
+    </ul>
+  </div>
 
+  <div class="social-links">
+    <ul class="social-icons">
       <li>
         {{ partial "svg/php.svg" }}
       </li>
@@ -20,7 +24,13 @@
       <li>
         {{ partial "svg/symfony.svg" }}
       </li>
-
+      <li>
+        {{ partial "svg/hugo.svg" }}
+      </li>
+    </ul>
+  </div>
+  <div class="social-links">
+    <ul class="social-icons">
       <li>
         {{ partial "svg/openai.svg" }}
       </li>
