Added content for front page

--- a/layouts/partials/general/stack.html
+++ b/layouts/partials/general/stack.html
@@ -34,5 +34,8 @@
       <li>
         {{ partial "svg/openai.svg" }}
       </li>
+      <li>
+        {{ partial "svg/figma.svg" }}
+      </li>
     </ul>
   </div>
