--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -23,9 +23,9 @@
       {{ end }}
       <li class="menu-item--align">
         <div class="switch">
-          <input class="switch-input" type="checkbox" id="themeSwitch">
-          <label aria-hidden="true" class="switch-label" for="themeSwitch">On</label>
-          <div aria-hidden="true" class="switch-marker"></div>
+          <input class="switch-input" type="hidden" id="themeSwitch">
+          <!-- <label aria-hidden="true" class="switch-label" for="themeSwitch">On</label> -->
+          <!-- <div aria-hidden="true" class="switch-marker"></div> -->
         </div>
       </li>
     </ul>
