--- a/layouts/partials/projects/project-entry.html
+++ b/layouts/partials/projects/project-entry.html
@@ -11,10 +11,11 @@
   </div>
   <div class="project-entry-info">
     <h3 class="project-entry-title">
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
+      <!-- <a href="{{ .Permalink }}">{{ .Title }}</a> -->
+      <p>{{ .Title }}</p>
       <sup>{{ partial "general/label-drafts.html" . }}</sup>
     </h3>
-    <div class="project-list-meta">
+    <div class="project-list-meta pb-5">
       {{ with .Params.techstack }}
       {{ range . }}
         <span>{{ . }}</span>
