Added java to stack

--- a/layouts/partials/general/stack.html
+++ b/layouts/partials/general/stack.html
@@ -25,6 +25,9 @@
         {{ partial "svg/symfony.svg" }}
       </li>
       <li>
+        {{ partial "svg/java.svg" }}
+      </li>
+      <li>
         {{ partial "svg/hugo.svg" }}
       </li>
     </ul>
