--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -2,8 +2,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    {{ $style := resources.Get "styles.css" }}    
-    <link rel="stylesheet" href="{{ $style.Permalink }}">
+    {{ $style := resources.Get "styles.css" | resources.ToCSS | resources.Minify }}    
+    <link rel="stylesheet" href="{{ $style.Permalink | relURL }}">
     {{ partial "head/resource-hints.html" . }}
     {{ partial "head/styles.html" . }}
     {{ partial "head/seo/seo.html" . }}
