feat: added aws

--- a/layouts/partials/general/stack.html
+++ b/layouts/partials/general/stack.html
@@ -40,5 +40,8 @@
       <li>
         {{ partial "svg/figma.svg" }}
       </li>
+      <li>
+        {{ partial "svg/aws.svg" }}
+      </li>
     </ul>
   </div>
