feat: node logo

--- a/layouts/partials/general/stack.html
+++ b/layouts/partials/general/stack.html
@@ -17,6 +17,9 @@
 
   <div class="social-links">
     <ul class="social-icons">
+        <li>
+            {{ partial "svg/node.svg" }}
+        </li>
       <li>
         {{ partial "svg/php.svg" }}
       </li>
